# opendataloader-pdfFork

./: .code-review-graphignore  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  PLAN.md  README.md  package.json  settings.xml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: harness.yml
apps/ui/: .gitignore  CHECKPOINT.md  HANDOVER.md  README.md
apps/ui/backend/: pyproject.toml
apps/ui/backend/app/: __init__.py  main.py  models.py  service.py
apps/ui/backend/tests/: test_api.py  test_service.py
apps/ui/frontend/: index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
apps/ui/frontend/src/: App.test.tsx  App.tsx  styles.css
apps/ui/frontend/src/components/: BoundingBoxPreview.test.tsx  BoundingBoxPreview.tsx
apps/ui/frontend/src/lib/: api.ts  boundingBoxes.test.ts  boundingBoxes.ts  session.ts  types.ts  validators.ts
apps/ui/scripts/: run_dev.py
content/docs/: cli-options-reference.mdx  faq.mdx  hybrid-mode.mdx  index.mdx
docs/architecture/: LAYERS.md
docs/golden-principles/: generated-artifacts.md  public-surface.md  thin-wrappers.md  validation.md
docs/guides/: AGENT_REVIEW.md  CODE_REVIEW_GRAPH.md
python/opendataloader-pdf/: .gitignore  README.md
python/opendataloader-pdf/src/opendataloader_pdf/: runner.py
python/opendataloader-pdf/tests/: test_runner.py
scripts/: check_boundaries.py  code-review-graph-mcp.cmd
